:green_heart: Add new comand

--- a/infra/Jenkinsfile
+++ b/infra/Jenkinsfile
@@ -3,7 +3,8 @@ pipeline {
   stages {
     stage('build') {
       steps {
-        sh 'bundle install'
+        sh 'rvm list'
+        sh 'ruby -v'
       }
     }
   }
