:green_heart: Add new comands

--- a/infra/Jenkinsfile
+++ b/infra/Jenkinsfile
@@ -4,6 +4,8 @@ pipeline {
     stage('build') {
       steps {
         sh 'ruby -v'
+        sh 'gem install bundler'
+        sh 'bundle install'
       }
     }
   }
