--- a/infra/Jenkinsfile
+++ b/infra/Jenkinsfile
@@ -6,6 +6,7 @@ pipeline {
         sh 'ruby -v'
         sh 'gem install bundler'
         sh 'bundle install'
+        sh 'echo $PATH'
       }
     }
   }
