--- a/infra/Jenkinsfile
+++ b/infra/Jenkinsfile
@@ -3,10 +3,18 @@ pipeline {
   stages {
     stage('build') {
       steps {
-        sh 'ruby -v'
-        sh 'gem install bundler'
-        sh 'bundle install'
+        getRubyVersion()
+        installPackages()
       }
     }
   }
+}
+
+def getRubyVersion() {
+  sh 'ruby -v'
+}
+
+def installPackages() {
+  sh 'gem install bundler'
+  sh 'bundle install --jobs 6'
 }
