:construction_worker: Added new stages in pipeline

--- a/infra/Jenkinsfile
+++ b/infra/Jenkinsfile
@@ -1,10 +1,24 @@
 pipeline {
   agent any
   stages {
-    stage('build') {
+    stage('Setup') {
       steps {
         getRubyVersion()
         installPackages()
+        createDatabase()
+      }
+    }
+    stage('Security Checks, Code Analysis and Test') {
+      parallel {
+        stage('Security Checks') {
+          runSecurityChecks()
+        }
+        stage('Code Analysis') {
+          runCodeAnalysis()
+        }
+        stage('Test') {
+          runTest()
+        }
       }
     }
   }
@@ -17,4 +31,21 @@ def getRubyVersion() {
 def installPackages() {
   sh 'gem install bundler'
   sh 'bundle install --jobs 6'
+}
+
+def createDatabase() {
+  sh 'bundle exec rake db:setup'
+}
+
+def runSecurityChecks() {
+  sh 'bundle-audit update'
+  sh 'bundle-audit check'
+}
+
+def runCodeAnalysis() {
+  sh 'rubocop'
+}
+
+def runTest() {
+  sh 'rspec'
 }
